plugins/kotlin/idea/tests/testData/multiplatform/expectActualLineMarkers/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in Native (2 modules)'")!>ActualizedInSharedAndLeaf<!>

expect class <!LINE_MARKER("descr='Has actuals in Native (3 modules)'")!>ActualizedInLeaves<!>
